# utr

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  GetHistogram.cpp  HistogramToTxt.cpp  README.md  RootToTxt.cpp  angcorr.mac  angdist.mac  angdist_test.mac  beam.mac  cleanup.sh  cleanup_scripts.sh  formatcode.sh  getHistogram  higs.cc  init_vis.mac  loop.mac  loopGetHistogram.sh  opensourcecode.sh  source.mac  utr.cc  utrConfig.h.in  vis.mac  vrml.mac
DetectorConstruction/: DetectorConstruction_120Sn_82Kr.cc  DetectorConstruction_164Dy_263_283.cc  DetectorConstruction_40Ar.cc  DetectorConstruction_54Fe_50Cr.cc  DetectorConstruction_82Se_82Kr_706_709.cc  DetectorConstruction_82Se_82Kr_710_718.cc  DetectorConstruction_82Se_82Kr_719_722.cc  DetectorConstruction_82Se_82Kr_723_725.cc  DetectorConstruction_82Se_82Kr_726_743.cc  DetectorConstruction_82Se_82Kr_726_744.cc  DetectorConstruction_82Se_82Kr_744_747.cc  DetectorConstruction_82Se_82Kr_745_747.cc  DetectorConstruction_82Se_82Kr_748.cc  DetectorConstruction_82Se_82Kr_749_761.cc  DetectorConstruction_82Se_82Kr_762.cc
DetectorConstruction/120Sn_82Kr/: DetectorConstruction.cc
DetectorConstruction/150Nd_152Sm_775_784/: DetectorConstruction.cc  DetectorConstruction.hh
DetectorConstruction/164Dy_263_283/: DetectorConstruction.cc  DetectorConstruction.hh
DetectorConstruction/40Ar/: DetectorConstruction.cc
DetectorConstruction/50Ti_54Cr/: DetectorConstruction.cc
DetectorConstruction/54Fe_50Cr/: DetectorConstruction.cc
DetectorConstruction/82Se_82Kr_706_709/: DetectorConstruction.cc
DetectorConstruction/82Se_82Kr_710_718/: DetectorConstruction.cc
DetectorConstruction/82Se_82Kr_719_722/: DetectorConstruction.cc
DetectorConstruction/82Se_82Kr_723_725/: DetectorConstruction.cc
DetectorConstruction/82Se_82Kr_744_747/: DetectorConstruction.cc
DetectorConstruction/82Se_82Kr_748/: DetectorConstruction.cc
DetectorConstruction/82Se_82Kr_749_761/: DetectorConstruction.cc
DetectorConstruction/82Se_82Kr_762/: DetectorConstruction.cc
DetectorConstruction/Basic_2018/: Beampipe_Downstream.cc  Beampipe_Downstream.hh  Beampipe_Upstream.cc  Beampipe_Upstream.hh  DetectorConstruction.cc  DetectorConstruction.hh  Detectors_2nd.cc  Detectors_2nd.hh  Detectors_G3.cc  Detectors_G3.hh  First_Setup.cc  First_Setup.hh  First_UTR_Wall.cc  First_UTR_Wall.hh  G3_Table.cc  G3_Table.hh  G3_Wall.cc  G3_Wall.hh  Room.cc  Room.hh  Table2.cc  Table2.hh  Wheel.cc  Wheel.hh  ZeroDegree_Setup.cc  ZeroDegree_Setup.hh
DetectorConstruction/Bremsstrahlung_flux/DHIPS_2015_Sn112/: DetectorConstruction.cc  DetectorConstruction.hh
DetectorConstruction/Campaign_2012/40Ar_10_33/: DetectorConstruction.cc
DetectorConstruction/Campaign_2012/40Ar_3_9/: DetectorConstruction.cc
DetectorConstruction/Campaign_2012/include/: Ar40_Target.hh  Collimator_Room.hh  Detectors_G3_10_33.hh  Detectors_G3_3_9.hh  Vacuum.hh
DetectorConstruction/Campaign_2012/src/: Ar40_Target.cc  Collimator_Room.cc  Detectors_G3_10_33.cc  Detectors_G3_3_9.cc  First_Setup.cc  First_UTR_Wall.cc  Room.cc  Vacuum.cc  ZeroDegree_Setup.cc
DetectorConstruction/Campaign_2013/164Dy_263_283/: DetectorConstruction.cc
DetectorConstruction/Campaign_2014_2015/150Sm/: Beampipe_Upstream.cc  Beampipe_Upstream.hh  DetectorConstruction.cc  Detectors_G3_150Sm.cc  Detectors_G3_150Sm.hh  First_Setup.cc  First_UTR_Wall.cc  (+9 more)
DetectorConstruction/DHIPS_2019/: create_bremsstrahlung_spectrum.py  schiff.py
OutputProcessing/: AngularDistributionGenerator_Test.cpp  CMakeLists.txt  GetHistogram-Eventwise.cpp  GetHistogram.cpp  GetSolidAngleCoverage.cpp  HistogramToTxt.cpp  Makefile  MergeFiles.cpp  RootToTxt.cpp  compile_ROOT_scripts.sh  fep_efficiency.sh  getHistogram  getHistogramRDF.cpp  histogramToTxt  loopGetHistogram.sh  loopHistogramToTxt.sh  utrwrapper.py
include/: ActionInitialization.hh  Analysis.hh  AngularCorrelationGenerator.hh  AngularCorrelationMessenger.hh  AngularDistribution.hh  AngularDistributionGenerator.hh  AngularDistributionMessenger.hh  BGO.hh  Bricks.hh  CeBr3_2x2.hh  Detector.hh  DetectorConstruction.hh  EMPhysicsPolarizedJAEA.hh  EnergyDepositionSD.hh  EventAction.hh  FilterCase.hh  Filter_Case.hh  Filters.hh  GeneralParticleSource.hh  Germanium1_TUD.hh  Germanium2_TUD.hh  HPGe1.hh  HPGe1_55.hh  HPGe2.hh  HPGe2_55.hh  HPGe3.hh  HPGe4.hh  HPGe_55_TUNL_21638.hh  HPGe_55_TUNL_31524.hh  HPGe_60_TUNL_21033.hh  HPGe_60_TUNL_30986.hh  HPGe_60_TUNL_31061.hh  HPGe_60_TUNL_40663.hh  HPGe_ANL.hh  HPGe_Clover.hh  HPGe_Clover_Properties.hh  HPGe_Coaxial.hh  HPGe_Coaxial_Properties.hh  HPGe_Collection.hh  HPGe_Cologne.hh  (+23 more)
macros/examples/: angcorr.mac  angdist.mac  attenuation.xmac  beam.mac  genericLoopable.mac  loop.mac  repeatSim.mac  source.mac  utrwrapper-Eventwise-mode-efficiency-example.xmac  utrwrapper-angdist-example.xmac  utrwrapper-attenuation-example.xmac  utrwrapper-beam-example.xmac  utrwrapper-bremsstrahlung-example.xmac  utrwrapper-efficiency-example.xmac  utrwrapper_bremsstrahlung_2.5MeV_example.xmac  vrml-3D-visualization.mac
scripts/: formatcode.sh  init_vis.mac
src/: .DetectorConstruction.cc.swp  ActionInitialization.cc  AngularCorrelationGenerator.cc  AngularCorrelationMessenger.cc  AngularDistribution.cc  AngularDistributionGenerator.cc  AngularDistributionMessenger.cc  BGO.cc  CeBr3_2x2.cc  Detector.cc  DetectorConstruction.cc  EMPhysicsPolarizedJAEA.cc  EnergyDepositionSD.cc  EventAction.cc  FilterCase.cc  Filter_Case.cc  GeneralParticleSource.cc  Germanium1_TUD.cc  Germanium2_TUD.cc  HPGe1.cc  HPGe1_55.cc  HPGe2.cc  HPGe2_55.cc  HPGe3.cc  HPGe4.cc  HPGe_55_TUNL_21638.cc  HPGe_55_TUNL_31524.cc  HPGe_60_TUNL_21033.cc  HPGe_60_TUNL_30986.cc  HPGe_60_TUNL_31061.cc  HPGe_60_TUNL_40663.cc  HPGe_ANL.cc  HPGe_Clover.cc  HPGe_Coaxial.cc  HPGe_Cologne.cc  HPGe_Stuttgart.cc  LaBr_3x3.cc  LaBr_Cologne.cc  LaBr_Galatea.cc  LaBr_TUD.cc  (+13 more)
unit_test/AngularCorrelationGenerator/: AngularCorrelationGenerator_Test.cpp  Makefile  angcorr_test.mac
unit_test/AngularDistributionGenerator/: AngularDistributionGenerator_Test.cpp  Makefile  angdist_test.mac
(+300 files in other folders)
